[package]
name = "nwm_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = { version = "0.2.153", default-features = false }
function_name = "0.3.0"
# Modified to work with union types
const-default = { path = "../../const_default", version = "1.0.0", features = [
    "derive",
    "unstable",
] }

[build-dependencies]
bindgen = "0.69.4"
